Bug 1119850 - Modify Vsync Timestamp on Mac to be the previous vsync timestamp. r=mstange